# ircord-server-api

./: .gitignore  CMakeLists.txt  INTEGRATION.md  PLAN.md  README.md
examples/: bug_report_example.cpp
include/ircord/api/: auth.hpp  middleware.hpp  request.hpp  response.hpp  router.hpp  server.hpp  types.hpp
src/: auth.cpp  middleware.cpp  request.cpp  response.cpp  router.cpp  server.cpp  types.cpp
tests/: test_router.cpp  test_server.cpp
