cmake_minimum_required(VERSION 3.20)
if(POLICY CMP0167)
    cmake_policy(SET CMP0167 OLD)
endif()

project(ircord-server-api 
    VERSION 0.1.0 
    DESCRIPTION "IRCord HTTP API Server Library" 
    LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(WIN32)
    add_compile_definitions(_WIN32_WINNT=0x0A00 NOMINMAX WIN32_LEAN_AND_MEAN)
    add_compile_definitions(BOOST_ALL_NO_LIB)
endif()

# ──────────────────────────────────────────────
# Find dependencies (use parent's if available)
# ──────────────────────────────────────────────

# Try to find dependencies from parent project first
if(NOT TARGET Boost::system)
    find_package(Boost REQUIRED COMPONENTS system)
endif()

if(NOT TARGET nlohmann_json::nlohmann_json)
    find_package(nlohmann_json CONFIG REQUIRED)
endif()

if(NOT TARGET spdlog::spdlog)
    find_package(spdlog CONFIG REQUIRED)
endif()

# ──────────────────────────────────────────────
# ircord-server-api static library
# ──────────────────────────────────────────────

set(API_SOURCES
    src/server.cpp
    src/router.cpp
    src/middleware.cpp
    src/auth.cpp
    src/request.cpp
    src/response.cpp
)

set(API_HEADERS
    include/ircord/api/server.hpp
    include/ircord/api/request.hpp
    include/ircord/api/response.hpp
    include/ircord/api/router.hpp
    include/ircord/api/middleware.hpp
    include/ircord/api/auth.hpp
    include/ircord/api/types.hpp
)

add_library(ircord-server-api STATIC ${API_SOURCES} ${API_HEADERS})

target_include_directories(ircord-server-api PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

# Link against Boost.Beast (header-only) and other deps
target_link_libraries(ircord-server-api PUBLIC
    Boost::system
    nlohmann_json::nlohmann_json
    spdlog::spdlog
)

if(WIN32)
    target_link_libraries(ircord-server-api PRIVATE ws2_32)
endif()

# Compiler warnings
if(MSVC)
    target_compile_options(ircord-server-api PRIVATE /W4 /WX-)
else()
    target_compile_options(ircord-server-api PRIVATE -Wall -Wextra -Wpedantic)
endif()

# ──────────────────────────────────────────────
# Tests
# ──────────────────────────────────────────────
option(IRCORD_API_BUILD_TESTS "Build HTTP API tests" ON)
if(IRCORD_API_BUILD_TESTS)
    enable_testing()
    
    add_executable(test-api tests/test_server.cpp tests/test_router.cpp)
    target_link_libraries(test-api PRIVATE ircord-server-api)
    add_test(NAME api-tests COMMAND test-api)
endif()

# ──────────────────────────────────────────────
# Installation
# ──────────────────────────────────────────────
install(TARGETS ircord-server-api
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
)

install(DIRECTORY include/ircord/api
    DESTINATION include/ircord
)
